--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "css-loader": "^3.4.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
