--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
+    "image-webpack-loader": "^6.0.0",
+    "mdbreact": "^4.25.3",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
