--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "bcryptjs": "*",
+    "cancan": "^3.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
@@ -20,6 +22,8 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-facebook": "~2.1.1",
+    "passport-google-oauth": "~1.0.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5"
