--- a/back/package.json
+++ b/back/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.7.2",
+    "@sendgrid/mail": "^6.5.4",
     "bcryptjs": "*",
-    "cancan": "^3.1.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cancan": "^3.1.0",
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
@@ -21,9 +22,9 @@
     "express-session": "^1.17.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5"
